--- a/.env.test
+++ b/.env.test
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb+srv://geovanamendes:jrnL2IumjwLQBl6H@cluster0.poyfrxp.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI_TESTE=mongodb+srv://geovanamendes:jrnL2IumjwLQBl6H@cluster0.poyfrxp.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
