--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,5 +45,5 @@ jobs:
     - name: deploy-to-render
       uses: johnbeynon/render-deploy-action@v0.0.8
       with:
-        services-id: ${{ secrets.RENDER_SERVICE_ID }}
+        service-id: ${{ secrets.RENDER_SERVICE_ID }}
         api-key: ${{ secrets.RENDER_API_KEY }}
